src/assets/styles/base.scss
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&display=swap');

:root {
  --font-size-1: 13.33px;
  --font-size-2: 16px;
  --font-size-3: 19.2px;
  --font-size-4: 23.04px;
  --font-size-5: 27.65px;
  --font-size-6: 33.18px;
  --font-size-7: 39.81px;
  --font-size-8: 47.78px;

  --font-family-primary: 'Bitter';
  --font-family-secondary: 'Roboto';

  --color-black: #202020;
  --color-white: #eeeeee;
  --color-gray: #4a4a4a;
  --color-purple-01: #603574;
  --color-purple-02: #784e8b;
  --color-purple-03: #e9d5ff;
  --color-wine-01: #762d48;
  --color-wine-02: #934560;
  --color-wine-03: #e9d5ff;
  --color-blue-01: #154c6b;
  --color-blue-02: #326383;
  --color-blue-03: #bfdbfe;
  --color-blue-04: #1f2937;

  --size-1: 4px;
  --size-2: 8px;
  --size-3: 12px;
  --size-4: 16px;
  --size-5: 20px;
  --size-6: 24px;
  --size-7: 28px;
  --size-8: 36px;

  --corner: 10px;
  --corner-button: 10px;
  --corner-full: 100px;

  --content-width: 1140px;
  --text-width: 1000px;
}

* {
  border: unset;
  box-sizing: border-box;
  line-height: 1.2em;
  margin: unset;
  padding: unset;

  scrollbar-width: thin;
  scrollbar-color: var(--color-gray) transparent;
}

body {
  --color-primary: var(--color-purple-01);
  --color-secondary: var(--color-wine-01);
  --color-accent: var(--color-blue-01);
  --color-text: var(--color-white);
  --color-background: var(--color-black);
  --color-background-translucent: rgba(255, 255, 255, 0.01);
  --color-border: var(--color-white);

  background-color: var(--color-background);

  &[data-theme='light'] {
    --color-primary: var(--color-purple-03);
    --color-secondary: var(--color-wine-03);
    --color-accent: var(--color-blue-03);
    --color-text: var(--color-blue-04);
    --color-gray: #dfdfdf;
    --color-background: var(--color-white);
    --color-background-translucent: rgba(255, 255, 255, 0.5);
    --color-border: var(--color-black);
  }

  &[data-custom-cursor-active='true'] {
    &,
    & * {
      cursor: none !important;
    }
  }
}

@supports selector(::-webkit-scrollbar) {
  *::-webkit-scrollbar-track {
    background-color: transparent;
    transition: 0.3s;
  }

  *::-webkit-scrollbar-thumb {
    background-color: var(--color-gray);
    border-radius: var(--corner);
    border: 6px solid var(--color-black);
  }

  *::-webkit-scrollbar-thumb:hover {
    background-color: var(--color-white);
  }

  *::-webkit-scrollbar {
    width: 12px;
    height: 12px;
  }
}

html {
  background-color: var(--color-background);
}

h1 {
  font-size: var(--font-size-8);
  font-weight: 700;
}

h2 {
  font-size: var(--font-size-7);
  font-weight: 700;
}

h3 {
  font-size: var(--font-size-6);
  font-weight: 500;
}

h4 {
  font-size: var(--font-size-5);
  font-weight: 500;
}

h5 {
  font-size: var(--font-size-4);
  font-weight: 500;
}

h6 {
  font-size: var(--font-size-3);
  font-weight: 500;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-family-primary), sans-serif;
}

ul,
p,
span,
div,
input,
label {
  font-family: var(--font-family-secondary), sans-serif;
  font-size: var(--font-size-2);
  font-weight: 400;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
span,
input,
label,
ul {
  --text-align: start;
  color: var(--color-text);
  max-width: var(--text-width);
  text-align: var(--text-align);
  width: 100%;
}

a,
button,
input,
textarea,
select,
[data-clickable] {
  -webkit-tap-highlight-color: transparent;
}

p {
  margin-bottom: var(--size-2);
}

ul {
  padding-left: var(--size-5);
}

li {
  margin-bottom: var(--size-3);
}

li > ul {
  margin-top: var(--size-3);
}

.title {
  font-family: var(--font-family-primary), sans-serif;
  font-size: var(--font-size-8);
  font-weight: 500;

  &--alt {
    font-family: 'Special Gothic Expanded One', sans-serif;
  }

  @include respond-to(md) {
    font-size: var(--font-size-6);
  }
}

.subtitle {
  font-family: var(--font-family-primary), sans-serif;
  font-size: var(--font-size-5);
  font-weight: 700;

  @include respond-to(md) {
    font-size: var(--font-size-4);
  }
}

.text {
  font-family: var(--font-family-secondary), sans-serif;
  font-size: var(--font-size-2);
  font-weight: 400;

  @include respond-to(md) {
    font-size: var(--font-size-1);
  }

  &--b {
    font-weight: 700;
  }
}

